<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sampelproduk" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_stock"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tv_stok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_9"
                android:textSize="9sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_judulproduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="2"
            android:text="@string/faktor_latters"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/published_at"
                android:textColor="@color/greeenmantis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9sp"/>

            <TextView
                android:id="@+id/tv_publishdate"
                android:background="@color/greeenmantis"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/_02_07_2022"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/author"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:lines="1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/name_autor"
                android:textSize="11sp" />

            <LinearLayout
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hargaprodukitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/_21_01"
                    android:textSize="11sp" />
            </LinearLayout>


        </LinearLayout>




    </LinearLayout>


</androidx.cardview.widget.CardView>