<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="150dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="100dp">

            <TextView
                android:gravity="center"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome_user"
                android:textColor="@color/black"
                android:textSize="39sp" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/codeathome"
                    android:textColor="@color/colorparent"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/bookstore"
                    android:textColor="@color/colorparent"
                    android:textSize="16sp" />

            </LinearLayout>


            <EditText
                android:id="@+id/tv_email"
                android:elevation="4dp"
                android:layout_width="467dp"
                android:layout_height="60dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:paddingStart="17dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/tv_password"
                android:elevation="4dp"
                android:layout_width="467dp"
                android:layout_height="60dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/passsword"
                android:inputType="textPassword"
                android:paddingStart="17dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="467dp"
                android:layout_height="60dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="false" />


        </LinearLayout>

        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>